Add/update i18n for: Bulgarian from Miroslav Yordanov <miordanov@i-space.org> and Peter Slavov <peshka@i-space.org> Italian from Alex Dupre <ale@FreeBSD.org> Arabic from Saleh Hathal <hathalsal@hotmail.com>
(Old svn revision: 3985)

--- a/po/bg.po
+++ b/po/bg.po
@@ -1,125 +1,124 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# Bulgarian translation of PACKAGE.
+# Copyright (C) 2004 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# Alex Dupre <ale@FreeBSD.org>, 2004.
-#
+# Miroslav Yordanov <miordanov@i-space.org>, 2004.
+# , fuzzy
+# 
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: XFce4\n"
-"POT-Creation-Date: 2003-12-04 09:37+0100\n"
-"PO-Revision-Date: 2004-03-11 13:45+0100\n"
-"Last-Translator: Alex Dupre <ale@FreeBSD.org>\n"
-"Language-Team: GUFI <traduzioni@gufi.org>\n"
+"Project-Id-Version: PACKAGE VERSION\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-12-20 23:28+0100\n"
+"PO-Revision-Date: 2004-03-09 18:48+0200\n"
+"Last-Translator: Miroslav Yordanov <miordanov@i-space.org>\n"
+"Language-Team: Bulgarian <bg@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: 8bit"
 
 #: panel/xfce_support.c:597
 msgid "Select file"
-msgstr "Seleziona il file"
+msgstr "Избира файл"
 
 #: panel/controls_dialog.c:254
 msgid "Change item"
-msgstr "Cambia oggetto"
+msgstr "Промяна на обекта"
 
-#: panel/controls_dialog.c:286
-#: panel/item_dialog.c:647
+#: panel/controls_dialog.c:286 panel/item_dialog.c:647
 msgid "Position:"
-msgstr "Posizione:"
+msgstr "Позиция"
 
-#: panel/controls_dialog.c:342
-#: panel/controls.c:272
+#: panel/controls_dialog.c:342 panel/controls.c:272
 msgid ""
 "Removing an item will also remove its popup menu.\n"
 "\n"
 "Do you want to remove the item?"
 msgstr ""
-"Rimuovere un oggetto rimuoverà anche il suo menu a scomparsa.\n"
+"Премахването на обекта·също ще премахне неговото изкачащо меню.\n"
 "\n"
-"Vuoi veramente rimuoverlo?"
+"Искате ли да премахнете обекта?"
 
 #: panel/item_dialog.c:320
 msgid "Other Icon"
-msgstr "Altra icona"
+msgstr "Друга икона"
 
 #: panel/item_dialog.c:345
 msgid "Select icon"
-msgstr "Seleziona un'icona"
+msgstr "Избор на икона"
 
 #: panel/item_dialog.c:384
 msgid "Icon:"
-msgstr "Icona:"
+msgstr "Икона:"
 
 #: panel/item_dialog.c:433
 msgid "Select command"
-msgstr "Seleziona comando"
+msgstr "Избор на команда"
 
 #: panel/item_dialog.c:461
 msgid "Command:"
-msgstr "Comando:"
+msgstr "Команда:"
 
-#: panel/item_dialog.c:498
-#: plugins/mailcheck/mailcheck.c:668
+#: panel/item_dialog.c:498 plugins/mailcheck/mailcheck.c:668
 msgid "Run in _terminal"
-msgstr "Esegui nel _terminale"
+msgstr "Стартиране в _терминал"
 
-#: panel/item_dialog.c:503
-#: plugins/mailcheck/mailcheck.c:676
+#: panel/item_dialog.c:503 plugins/mailcheck/mailcheck.c:676
 msgid "Use startup _notification"
-msgstr "Usa _notifica in avvio"
+msgstr "Използва съобщение при стартиране"
 
 #: panel/item_dialog.c:530
 msgid "Caption:"
-msgstr "Etichetta:"
+msgstr "Заглавие:"
 
 #: panel/item_dialog.c:563
 msgid "Tooltip:"
-msgstr "Suggerimento:"
+msgstr "Подсказка"
 
 #: panel/item_dialog.c:599
 msgid "Menu:"
-msgstr "Menu:"
+msgstr "Меню:"
 
 #: panel/item_dialog.c:606
 msgid "Attach menu to launcher"
-msgstr "Aggiungi menu al launcher"
+msgstr "Прикрепва меню към обекта"
 
 #: panel/item_dialog.c:738
 msgid "Icon Preview"
-msgstr "Anteprima Icona"
+msgstr "Преглед на икона"
 
 #: panel/item_dialog.c:742
 msgid "Drag file onto this frame to change the icon"
-msgstr "Trascina i file in questo riquadro per cambiare icona"
+msgstr "Дръпнете файл в тази рамка за се промени иконата"
 
 #: panel/item_dialog.c:930
 msgid "Change menu item"
-msgstr "Cambia oggetto del menu"
+msgstr "Промяна на обект от менюто"
 
 #. add buttons
 #: panel/item_dialog.c:933
 msgid "Remove"
-msgstr "Rimuovi"
+msgstr "Премахване"
 
 #: panel/item.c:441
 msgid "Click mouse button 3 to change item"
-msgstr "Clicca il terzo tasto del mouse per cambiare oggetto"
+msgstr "Натискане бутон 3 на мишката за промяна на обекта"
 
 #: panel/item.c:464
 msgid "Add launcher"
-msgstr "Aggiungi launcher"
+msgstr "Добавяне на обект"
 
 #: panel/item.c:469
 msgid "Add new item"
-msgstr "Aggiungi un nuovo oggetto"
+msgstr "Добавяне на нов обект"
 
 #: panel/item.c:601
 msgid "Launcher"
-msgstr "Launcher"
+msgstr "Обект"
 
 #: panel/main.c:115
 msgid "Are you sure you want to exit?"
-msgstr "Sei sicuro di voler uscire?"
+msgstr "Сигурни ли сте че искате да излезнете?"
 
 #: panel/main.c:243
 #, c-format
@@ -128,314 +127,309 @@ msgid ""
 "Part of the XFce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
-"%s, versione %s\n"
-"Parte di XFce Desktop Environment\n"
+"%s,·версия·%s\n"
+"Част от·XFce·Desktop·Environment\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:259
 msgid ""
-"Your window manager does not seem to support the new window manager hints as defined on http://www.freedesktop.org. \n"
+"Your window manager does not seem to support the new window manager hints as "
+"defined on http://www.freedesktop.org. \n"
 "Some XFce features may not work as intended."
 msgstr ""
-"Il tuo gestore di finestre non sembra supportare alcune delle specifiche definite da http://www.freedesktop.org. \n"
-"Alcune caratteristiche di XFce potrebbero non funzionare correttamente."
+"Вашият мениджър на прозорци изглежда не подържа загатвания"
+"дефинирани на http://www.freedesktop.org.·\n"
+"Някои възможности на XFce няма да работят както се очаква."
 
-#: panel/controls.c:320
-#: panel/panel.c:399
+#: panel/controls.c:320 panel/panel.c:128
 msgid "/Add _new item"
-msgstr "/Aggiungi un _nuovo oggetto"
+msgstr "/Добавяне на нов обект"
 
-#: panel/controls.c:322
-#: panel/panel.c:401
+#: panel/controls.c:322 panel/panel.c:130
 msgid "/_Properties..."
-msgstr "/_Proprietà ..."
+msgstr "/_Настройки"
 
 #: panel/controls.c:323
 msgid "/_Remove"
-msgstr "/_Rimuovi"
+msgstr "/_Премахва"
 
 #: panel/controls.c:655
 msgid "This item has no configuration options"
-msgstr "Questo oggetto non ha opzioni di configurazione"
+msgstr "Този обект няма опции за настройване"
 
-#: panel/panel.c:397
+#: panel/panel.c:126
 msgid "/XFce Panel"
-msgstr "/XFce Panel"
+msgstr "/XFce панел"
 
-#: panel/panel.c:402
+#: panel/panel.c:131
 msgid "/_Settings manager"
-msgstr "/Gestione impo_stazioni"
+msgstr "/_Мениджър за настройки"
 
-#: panel/panel.c:404
+#: panel/panel.c:133
 msgid "/_About XFce"
-msgstr "/_Info su XFce"
+msgstr "/_Относно XFce"
 
-#: panel/panel.c:405
+#: panel/panel.c:134
 msgid "/_Help"
-msgstr "/_Aiuto"
+msgstr "/_Помощ"
 
-#: panel/panel.c:407
+#: panel/panel.c:136
 msgid "/_Lock screen"
-msgstr "/_Blocca schermo"
+msgstr "/_Заключва екрана"
 
-#: panel/panel.c:408
+#: panel/panel.c:137
 msgid "/E_xit"
-msgstr "/_Esci"
+msgstr "/Изход"
 
-#: panel/panel.c:795
-#: settings/xfce_settings_plugin.c:82
+#: panel/panel.c:494 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
 msgid "XFce Panel"
-msgstr "Pannello XFce"
+msgstr "XFce панел"
 
 #: panel/icons.c:73
 msgid "Default"
-msgstr "Default"
+msgstr "По Подразбиране"
 
 #: panel/icons.c:74
 msgid "Editor"
-msgstr "Editor"
+msgstr "Редактор"
 
 #: panel/icons.c:75
 msgid "File management"
-msgstr "Gestione file"
+msgstr "Управление на файловете"
 
 #: panel/icons.c:76
 msgid "Utilities"
-msgstr "Utilità"
+msgstr "Полезни"
 
 #: panel/icons.c:77
 msgid "Games"
-msgstr "Giochi"
+msgstr "Игри"
 
 #: panel/icons.c:78
 msgid "Help browser"
-msgstr "Guida di aiuto"
+msgstr "Помощен браузър"
 
 #: panel/icons.c:79
 msgid "Multimedia"
-msgstr "Multimedia"
+msgstr "Мултимедия"
 
 #: panel/icons.c:80
 msgid "Network"
-msgstr "Rete"
+msgstr "Мрежа"
 
 #: panel/icons.c:81
 msgid "Graphics"
-msgstr "Grafica"
+msgstr "Графики"
 
 #: panel/icons.c:82
 msgid "Printer"
-msgstr "Stampante"
+msgstr "Принтер"
 
 #: panel/icons.c:83
 msgid "Productivity"
-msgstr "Produttività"
+msgstr "Продуктивност"
 
 #: panel/icons.c:84
 msgid "Sound"
-msgstr "Audio"
+msgstr "Звук"
 
 #: panel/icons.c:85
 msgid "Terminal"
-msgstr "Terminale"
+msgstr "Терминал"
 
 #: panel/mcs_client.c:208
 msgid "Settings manager not available"
-msgstr "Il gestione delle impostazioni non è disponibile"
+msgstr "Мениджъра за настройки не е достъпен"
 
-#: panel/popup.c:269
+#: panel/popup.c:263
 msgid "Menu"
-msgstr "Menu"
+msgstr "Меню"
 
 #: settings/xfce_settings_dialog.c:119
 msgid "Tiny"
-msgstr "Minuscole"
+msgstr "Тънък"
 
 #: settings/xfce_settings_dialog.c:123
 msgid "Small"
-msgstr "Piccole"
+msgstr "Малък"
 
 #: settings/xfce_settings_dialog.c:127
 msgid "Medium"
-msgstr "Medie"
+msgstr "Среден"
 
 #: settings/xfce_settings_dialog.c:131
 msgid "Large"
-msgstr "Grandi"
+msgstr "Голям"
 
 #: settings/xfce_settings_dialog.c:190
 msgid "Horizontal"
-msgstr "Orizzontale"
+msgstr "Хоризонтално"
 
 #: settings/xfce_settings_dialog.c:194
 msgid "Vertical"
-msgstr "Verticale"
+msgstr "Вертикално"
 
-#: settings/xfce_settings_dialog.c:226
-#: settings/xfce_settings_dialog.c:456
+#: settings/xfce_settings_dialog.c:226 settings/xfce_settings_dialog.c:456
 msgid "Left"
-msgstr "Sinistra"
+msgstr "Ляво"
 
-#: settings/xfce_settings_dialog.c:230
-#: settings/xfce_settings_dialog.c:457
+#: settings/xfce_settings_dialog.c:230 settings/xfce_settings_dialog.c:457
 msgid "Right"
-msgstr "Destra"
+msgstr "Дясно"
 
-#: settings/xfce_settings_dialog.c:234
-#: settings/xfce_settings_dialog.c:455
+#: settings/xfce_settings_dialog.c:234 settings/xfce_settings_dialog.c:455
 #: settings/xfce_settings_dialog.c:511
 msgid "Top"
-msgstr "Alto"
+msgstr "Горе"
 
-#: settings/xfce_settings_dialog.c:238
-#: settings/xfce_settings_dialog.c:454
+#: settings/xfce_settings_dialog.c:238 settings/xfce_settings_dialog.c:454
 #: settings/xfce_settings_dialog.c:519
 msgid "Bottom"
-msgstr "Basso"
+msgstr "Долу"
 
 #: settings/xfce_settings_dialog.c:374
 msgid "Panel size:"
-msgstr "Dimensioni pannello:"
+msgstr "Размер на панела:"
 
 #: settings/xfce_settings_dialog.c:390
 msgid "Panel orientation:"
-msgstr "Orientamento pannello:"
+msgstr "Ориентация на панела:"
 
 #: settings/xfce_settings_dialog.c:407
 msgid "Popup position:"
-msgstr "Posizione Popup:"
+msgstr "Позиция на изкачащото меню:"
 
 #: settings/xfce_settings_dialog.c:424
 msgid "Icon theme:"
-msgstr "Tema delle icone:"
+msgstr "Тема за икони:"
 
 #: settings/xfce_settings_dialog.c:495
 msgid "Panel layer:"
-msgstr "Livello del panello:"
+msgstr "Слой на панела:"
 
 #: settings/xfce_settings_dialog.c:515
 msgid "Normal"
-msgstr "Normale"
+msgstr "Нормално"
 
 #: settings/xfce_settings_dialog.c:535
 msgid "Center the panel:"
-msgstr "Centra il pannello:"
+msgstr "Центриране на панела"
 
 #: settings/xfce_settings_dialog.c:559
 msgid "Set"
-msgstr "Imposta"
+msgstr "Настрой"
 
 #: settings/xfce_settings_dialog.c:595
 msgid "Autohide:"
-msgstr "Autoscomparsa:"
+msgstr "Автоматично скриване:"
 
 #: settings/xfce_settings_dialog.c:663
 msgid "XFce Panel Settings"
-msgstr "Impostazioni del Pannello di XFce"
+msgstr "XFce·настройки за панела"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
 msgid "Appearance"
-msgstr "Aspetto"
+msgstr "Изглед"
 
 #. Position
 #: settings/xfce_settings_dialog.c:696
 msgid "Position"
-msgstr "Posizione"
+msgstr "Позиция"
 
 #. autohide
 #: settings/xfce_settings_dialog.c:712
 msgid "Behaviour"
-msgstr "Comportamento"
+msgstr "Вид"
 
 #: plugins/clock/clock.c:57
 msgid "Sunday"
-msgstr "Domenica"
+msgstr "Неделя"
 
 #: plugins/clock/clock.c:58
 msgid "Monday"
-msgstr "Lunedì"
+msgstr "Понеделник"
 
 #: plugins/clock/clock.c:59
 msgid "Tuesday"
-msgstr "Martedì"
+msgstr "Вторник"
 
 #: plugins/clock/clock.c:60
 msgid "Wednesday"
-msgstr "Mercoledì"
+msgstr "Сряда"
 
 #: plugins/clock/clock.c:61
 msgid "Thursday"
-msgstr "Giovedì"
+msgstr "Четвъртък"
 
 #: plugins/clock/clock.c:62
 msgid "Friday"
-msgstr "Venerdì"
+msgstr "Петък"
 
 #: plugins/clock/clock.c:63
 msgid "Saturday"
-msgstr "Sabato"
+msgstr "Събота"
 
 #: plugins/clock/clock.c:67
 msgid "January"
-msgstr "Gennaio"
+msgstr "Януари"
 
 #: plugins/clock/clock.c:68
 msgid "February"
-msgstr "Febbraio"
+msgstr "Февруари"
 
 #: plugins/clock/clock.c:69
 msgid "March"
-msgstr "Marzo"
+msgstr "Март"
 
 #: plugins/clock/clock.c:70
 msgid "April"
-msgstr "Aprile"
+msgstr "Април"
 
 #: plugins/clock/clock.c:71
 msgid "May"
-msgstr "Maggio"
+msgstr "Май"
 
 #: plugins/clock/clock.c:72
 msgid "June"
-msgstr "Giugno"
+msgstr "Юни"
 
 #: plugins/clock/clock.c:73
 msgid "July"
-msgstr "Luglio"
+msgstr "Юли"
 
 #: plugins/clock/clock.c:74
 msgid "August"
-msgstr "Agosto"
+msgstr "Август"
 
 #: plugins/clock/clock.c:75
 msgid "September"
-msgstr "Settembre"
+msgstr "Септември"
 
 #: plugins/clock/clock.c:76
 msgid "October"
-msgstr "Ottobre"
+msgstr "Октомври"
 
 #: plugins/clock/clock.c:77
 msgid "November"
-msgstr "Novembre"
+msgstr "Ноември"
 
 #: plugins/clock/clock.c:78
 msgid "December"
-msgstr "Dicembre"
+msgstr "Декември"
 
 #: plugins/clock/clock.c:350
 msgid "Clock type:"
-msgstr "Tipo di orologio:"
+msgstr "Тип на часовника:"
 
 #: plugins/clock/clock.c:363
 msgid "Analog"
-msgstr "Analogico"
+msgstr "Аналогов"
 
 #: plugins/clock/clock.c:367
 msgid "Digital"
-msgstr "Digitale"
+msgstr "Цифров"
 
 #: plugins/clock/clock.c:371
 msgid "LED"
@@ -443,15 +437,15 @@ msgstr "LED"
 
 #: plugins/clock/clock.c:433
 msgid "Hour mode:"
-msgstr "Modo d'ora"
+msgstr "Часови режим:"
 
 #: plugins/clock/clock.c:440
 msgid "24 hour"
-msgstr "24 ore"
+msgstr "24 часов"
 
 #: plugins/clock/clock.c:446
 msgid "12 hour"
-msgstr "12 ore"
+msgstr "12 часов"
 
 #: plugins/clock/clock.c:452
 msgid "AM/PM"
@@ -459,19 +453,19 @@ msgstr "AM/PM"
 
 #: plugins/clock/clock.c:490
 msgid "Show seconds:"
-msgstr "Mostra i secondi:"
+msgstr "Показва секунди:"
 
 #: plugins/clock/clock.c:599
 msgid "Xfce Clock"
-msgstr "Orologio di XFce"
+msgstr "Xfce часовник"
 
 #: plugins/pager/pager.c:271
 msgid "Graphical pager"
-msgstr "Pager grafico"
+msgstr "Графичен пейджър"
 
 #: plugins/switcher/switcher.c:696
 msgid "Desktop switcher"
-msgstr "Selettore del desktop"
+msgstr "Превключвач на работното място"
 
 #: plugins/systembuttons/systembuttons.c:60
 msgid ""
@@ -479,71 +473,71 @@ msgid ""
 "\n"
 "Ask your system administrator for more information"
 msgstr ""
-"L'accesso alla configurazione di sistema è stato disabilitato.\n"
+"Достъпът до системата за конфигуриране е изключен.\n"
 "\n"
-"Chiedere all'amministratore di sistema per maggiori informazioni"
+"Питайте вашия системен администратор за повече инфорцмация"
 
 #: plugins/systembuttons/systembuttons.c:148
 msgid "Lock the screen"
-msgstr "Blocca lo schermo"
+msgstr "Заключване на екрана"
 
 #: plugins/systembuttons/systembuttons.c:149
 #: plugins/systembuttons/systembuttons.c:518
 msgid "Exit"
-msgstr "Esci"
+msgstr "Изход"
 
 #: plugins/systembuttons/systembuttons.c:150
 #: plugins/systembuttons/systembuttons.c:519
 msgid "Setup"
-msgstr "Imposta"
+msgstr "Настройки"
 
 #: plugins/systembuttons/systembuttons.c:151
 #: plugins/systembuttons/systembuttons.c:520
 msgid "Info"
-msgstr "Info"
+msgstr "Информация"
 
 #: plugins/systembuttons/systembuttons.c:500
 msgid "Show two buttons:"
-msgstr "Mostra due bottoni:"
+msgstr "Показва два бутона:"
 
 #. set names to use in option menus
 #: plugins/systembuttons/systembuttons.c:517
 msgid "Lock"
-msgstr "Blocca"
+msgstr "Заключва"
 
 #: plugins/systembuttons/systembuttons.c:549
 msgid "Button 1:"
-msgstr "Bottone 1:"
+msgstr "Бутон 1:"
 
 #: plugins/systembuttons/systembuttons.c:565
 msgid "Button 2:"
-msgstr "Bottone 2:"
+msgstr "Бутон 2:"
 
 #: plugins/systembuttons/systembuttons.c:600
 msgid "System buttons"
-msgstr "Bottoni di sistema"
+msgstr "Системни бутони"
 
 #: plugins/separator/separator.c:153
 msgid "Separator"
-msgstr "Separatore"
+msgstr "Разделител"
 
 #: plugins/mailcheck/mailcheck.c:539
 msgid "Mail box:"
-msgstr "Casella postale:"
+msgstr "Пощенска кутия:"
 
 #: plugins/mailcheck/mailcheck.c:623
 msgid "Mail command:"
-msgstr "Comando di posta:"
+msgstr "Пощенска команда:"
 
 #: plugins/mailcheck/mailcheck.c:637
 msgid "Command to run when the button on the panel is clicked"
-msgstr "Comando da eseguire quando il bottone sul pannello viene cliccato"
+msgstr "Команда която да се стартира при натискане на бутона на панела"
 
 #: plugins/mailcheck/mailcheck.c:706
 msgid "Interval (sec):"
-msgstr "Intervallo (sec):"
+msgstr "Интервал (сек):"
 
 #: plugins/mailcheck/mailcheck.c:778
 msgid "Mail check"
-msgstr "Controllo posta"
+msgstr "Проверка на пощата"
 
