- Reduce handle width to show only one line of dots - disable completion combo, because it doesn't work on new installs - put 'Properties...' and 'Remove' in a submenu of panel item right-click   menus. May prevent some accidental removals.
(Old svn revision: 3997)

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,12 @@
 Noteworthy updates to the xfce4 panel should be recorded here.
 
+* 2004-04-02  Jasper Huijsmans <jasper@xfce.org>
+
+- Reduce handle width to show only one line of dots
+- disable completion combo, because it doesn't work on new installs
+- put 'Properties...' and 'Remove' in a submenu of panel item right-click
+  menus. May prevent some accidental removals.
+
 * 2004-01-18  Jasper Huijsmans <jasper@moongroup.com>
 
 Split out the code for choosing a command and choosing an icon from
